--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3>Lienzo por comando de voz</h3>
 
     <span id="status"></span> 
-    <button onclick="start();" class="btn btn-success">Draw</button>
+    <button onclick="start();" class="btn btn-success">Dibujar</button>
     <br><br>
 <script src="main.js"></script>
   </body>
